Calling makeFirstResponder on WKWebView doesn't work. https://bugs.webkit.org/show_bug.cgi?id=143482 rdar://problem/20298166

Reviewed by Dan Bernstein.

Adding forwarding of the responder status to the WKView.
We also need to avoid doing any cleanup in resignFirstResponder
if we know we are about to regain responder status again.
Same goes for becomeFirstResponder.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView becomeFirstResponder]):
(-[WKWebView acceptsFirstResponder]):
* UIProcess/API/mac/WKView.mm:
(-[WKView becomeFristResponder]):
(-[WKView resignFirstResponder]):



Canonical link: https://commits.webkit.org/161552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182554 268f45cc-cd09-0410-ab3c-d52691b4dbfc